@@ -1,5 +1,11 @@
 2012-09-17  Walter Lee  <walt@tilera.com>
 
+	* elf32-tilepro.c (tilepro_elf_relocate_section): Remove unused
+	got_base variable.
+	* elfxx-tilegx.c (tilegx_elf_relocate_section): Ditto.
+
+2012-09-17  Walter Lee  <walt@tilera.com>
+
 	* elf32-tilepro.c (tilepro_elf_relocate_section): Fix computation
 	of got relocations for when .got.plt section is merged with .got.
 	* elfxx-tilegx.c (tilegx_elf_relocate_section): Ditto.
